--- a/styles.css
+++ b/styles.css
@@ -543,7 +543,8 @@ input[type="search"]{
     padding: 2.5% 0 2.5% 0;
 }
 
-@media(max-width:425px) and (min-width:320px){
+@media(max-width:640px){
+/*(max-width:425px) and (min-width:320px){*/
 /*(max-width:640px){*/
 
 	.top{
@@ -555,6 +556,10 @@ input[type="search"]{
 		display: unset;
 		margin: 0;
 		margin-top: 40%;
+	}
+
+	.top .logo1{
+		display: unset;
 	}
 
 	.time, .contact, .navbar,.logo{
