--- a/styles.css
+++ b/styles.css
@@ -558,8 +558,8 @@ input[type="search"]{
 		grid-template-columns: auto auto;
 		grid-template-rows: 30vh 30vh 30vh 30vh;
 		gap: 1rem 0.5rem;
-		margin: 0 auto;
-		width: 90%;
+		margin-top: 0;
+		width: 100%;
 	}
 
 	.post1{
@@ -567,9 +567,10 @@ input[type="search"]{
 		background-size: cover;
 		background-position: center;
 		background-repeat: no-repeat;
-		grid-column: 1 /span 2;
+		grid-column: 1 / span 2;
 		grid-row: 1 / span 2;
 		position: relative;
+		width: 100%;
 	}
 
 	.post1 h3{
@@ -577,9 +578,9 @@ input[type="search"]{
 		font-weight: 500;
 		line-height: 1.67rem;
 		position: absolute;
-		left: 3%;
-		top: 75%;
-		width: 335px;
+		left: 5%;
+		top: 78%;
+		width: 70%;
 	} 	
 
 	.post1 .p{
@@ -587,14 +588,14 @@ input[type="search"]{
 		font-weight: 400;
 		line-height: 0.76rem;
 		position: absolute;
-		left: 3%;
-		top: 70%;
+		left: 5%;
+		top: 73%;
 	}
 
 	.post1 .d_b{
 		background-color: #0088FF;
 		position: absolute;
-		left: 3%;
+		left: 6%;
 		top: 5%;
 		width: 14%;
 	}
@@ -605,7 +606,9 @@ input[type="search"]{
 		background-position: center;
 		background-repeat: no-repeat;
 		position: relative;
-		width: 162.32px;
+		margin: 0 auto;
+		margin-right: 0;
+		width: 90%;
 	}
 
 	.post2 h3{
@@ -641,7 +644,9 @@ input[type="search"]{
 		background-position: center;
 		background-repeat: no-repeat;
 		position: relative;
-		width: 162.32px;
+		margin: 0 auto;
+		margin-left: 0;
+		width: 90%;
 	}
 
 	.post3 h3{
@@ -680,7 +685,8 @@ input[type="search"]{
 		grid-column: 1 /span 2;
 		grid-row: 4 / 5;
 		position: relative;
-		width: 332.64px;
+		margin: 0 auto;
+		width: 90%;	
 	}
 
 	.post4 h3{
@@ -690,7 +696,7 @@ input[type="search"]{
 		position: absolute;
 		left: 4%;
 		top: 60%;
-		width: 300px;
+		width: 200px;
 	}
 
 	.post4 .p{
@@ -719,21 +725,21 @@ input[type="search"]{
 	}
 
 	.Dont_miss{
-		margin: 2rem auto;
+		margin: 1.5rem auto;
 	}
 
 	.miss_top_left, .miss_top_right{
-		margin: 0 auto;
+		margin: 3% auto;
 		width: 90%;
 	}
 
 	.miss_top_right{
 		color: #FFFFFF;
 		display: grid;
-		grid-template-columns: 1.8rem 4.3rem 3.2rem 7.1rem 3.65rem 4.1rem 3.5rem 3.5rem;
-	/*	grid-template-columns: 3fr 6fr 5fr 15fr 7fr 8fr 5fr 5fr;*/
+/*		grid-template-columns: 1.8rem 4.3rem 3.2rem 7.1rem 3.65rem 4.1rem 3.5rem 3.5rem;*/
+/*		grid-template-columns: 3fr 6fr 5fr 15fr 7fr 8fr 5fr 5fr;*/
 		grid-template-rows: 1.375rem;
-		grid-template-columns: auto auto auto auto auto auto auto auto auto;
+		grid-template-columns: auto auto auto auto auto auto auto auto;
 		justify-content: space-between;
 		align-items: center;
 		align-content: center;
@@ -741,7 +747,7 @@ input[type="search"]{
 		font-family: Oswald;
 		font-size: 0.75rem;
 		font-weight: 400;
-		line-height: 1.1rem;
+		line-height: 1rem;
 		text-align: center;
 		width: 90%;
 	}
@@ -758,23 +764,24 @@ input[type="search"]{
 		grid-template-columns: 1fr;
 		grid-template-rows: 70px 70px 70px 70px 70px;
 		gap: 1rem;
-		margin: 10% auto;
-		margin-bottom:15%;
+		margin: 0 auto;
+		margin-bottom:12%;
+		margin-top: 5%;
 		width: 90%;
 	}
 
 	.pt2_img{
 		display: flex;
-		gap: o.5rem;
-		height: 75px;
-		width: 335px;
+		gap: 0.5rem;
+		height: 70px;
+		width: 100%;
 	}
 
 	.pt2_img h3{
 		font-family: Oswald;
-		font-size: 1rem;
+		font-size: 0.9rem;
 		font-weight: 400;
-		line-height: 1.48rem;
+		line-height: 1.08rem;
 		text-align: left;
 		padding-top: 0.5rem;
 	}
@@ -816,14 +823,14 @@ input[type="search"]{
 		border: none;
 		border-bottom: 0.125rem solid #F65050;
 		padding-top: 0.5rem;
-		width: 20%;
+		width: 25%;
 	}
 
 	.right{
 		border: none;
 		border-bottom: 0.125rem solid #393939;
 		padding-top: 0.5rem;
-		width: 70%;
+		width: 75%;
 	}
 
 	.r_img{
